--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf8">
-		<title></title>
+		<title>Calculate your worth</title>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="js/formula.js" defer></script>
 		<script src="js/main.js" defer></script>
@@ -10,6 +10,11 @@
 	<body>
 		<h1>Calculate your worth</h1>
 		<p>Intro text, blabla.</p>
+		
+		<form action="">
+			<label>Enter your github user name <input type="text" id="username" /></label>
+		</form>
+
 		<p id="numberOfRepositories"><span>0</span> open source repositories</p>
 		<p id="numberOfForkedRepositories"><span>0</span> forked repositories</p>
 		<p id="numberOfFavourites"><span>0</span> favourites</p>
