yay for properly cors-configured servers!

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<p>Intro text, blabla.</p>
 		
 		<form action="">
-			<label>Enter your github user name <input type="text" id="username" /></label>
+			<label>Enter your github user name <input type="text" id="username" placeholder="sole" /></label>
 		</form>
 
 		<p id="numberOfRepositories"><span>0</span> open source repositories</p>
