--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf8">
 		<title>Calculate your worth</title>
 		<link rel="stylesheet" href="css/style.css">
+		<script src="js/libs/Tween.js" defer></script>
 		<script src="js/formula.js" defer></script>
 		<script src="js/main.js" defer></script>
 	</head>
