show one thing at a time!

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 			<label>Enter your github user name <input type="text" id="username" placeholder="sole" /></label>
 		</form>
 
-		<p id="numberOfRepositories"><span>0</span> open source repositories</p>
-		<p id="numberOfForkedRepositories"><span>0</span> forked repositories</p>
-		<p id="numberOfFavourites"><span>0</span> favourites</p>
-		<p id="totalWorth"><span>0</span> your value as a person and as Real Developer™</p>
+		<p id="numberOfRepositories" hidden><span>0</span> open source repositories</p>
+		<p id="numberOfForkedRepositories" hidden><span>0</span> forked repositories</p>
+		<p id="numberOfFavourites" hidden><span>0</span> favourites</p>
+		<p id="totalWorth" hidden><span>0</span> your value as a person and as Real Developer™</p>
 	</body>
 </html>
