add submit so we can uhhh search with mobile devices #noob

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p>Intro text, blabla.</p>
 		
 		<form action="">
-			<label>Enter your github user name <input type="text" id="username" placeholder="sole" /></label>
+			<label>Enter your github user name <input type="text" id="username" placeholder="sole" /><input type="submit" value="search"/></label>
 		</form>
 
 		<p id="numberOfRepositories" hidden><span>0</span> open source repositories</p>
