viewport for mobile delight

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf8">
 		<title>Calculate your worth</title>
+		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="css/style.css">
 		<script src="js/libs/Tween.js" defer></script>
 		<script src="js/formula.js" defer></script>
